# enum-array

./: .clang-format  .clang-tidy  .gitmodules  README.md  meson.build
include/fpm/: enum-array.hpp
include/gpollo/: enum-array.hpp
scripts/: check-stack-usage.sh  compile.sh  estimate-stack-usage.py
tests/: meson.build
tests/enum-array/: compile-failure-duplicate.cpp  compile-failure-missing.cpp  compile-failure-order.cpp  iterator-simple.cpp  meson.build  non-copyable.cpp  object-attribute.cpp  object.cpp  safe-init-different-constructors.cpp  safe-init-large-object.cpp  safe-init-non-copyable.cpp  safe-init-object-attribute.cpp  safe-init-object.cpp  safe-init-simple.cpp
